@@ -24,6 +24,18 @@
 2010-02-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/blob.c (OpenBlob): Only apply scene substitution to
+        the filename if adjoin is false.
+
+  <LI> magick/constitute.c (WriteImage): If adjoin is true, then
+        restore original filename specification since opening the blob
+        modifies it.  Resolves Debian bug ID 552998.
+
+  <LI> magick/image.c (SetImageInfo): Don't check filename for scene
+        substitution if adjoin is intentionally false.  This allows saving
+        to file names which look like they contain a scene substitution
+        pattern.
+
   <LI> magick/command.c (MogrifyImage): Convolution failure results in
         a crash rather than an error report.  Resolves Debian bug ID
         539251.
